# ai-playground

./: antropic_api_check.sh  business_analysis.py  chat_with_me.ipynb  deepseek_api_check.sh  gemini_api_check.sh  groq_api_check.sh  pyproject.toml  requirements.txt  testing_models.ipynb  testing_models.py
me/: summary.txt
